--- a/client/src/App.css
+++ b/client/src/App.css
@@ -11,6 +11,7 @@
 
 * {
   box-sizing: border-box;
+  border: 1px solid red;
   margin: 0;
   padding: 0;
 }
@@ -36,16 +37,25 @@ ul {
   list-style: none;
 }
 
-img {
-  width: 100%;
+.divLogo {
+  width: 20%;
+}
+.logoNav { 
+/* border: 1px solid red; */
+margin-left: 20px;
+margin-top: 10px;
+width: 140%;
+text-align: left;
+float: left;
 }
 
 /* Utilities */
 .container {
-  max-width: 1100px;
+  /* max-width: 1100px;
   margin: auto;
-  overflow: hidden;
+  overflow: hidden; */
   padding: 0 2rem;
+  margin-top: 100px;
 }
 
 /* Text Styles*/
@@ -355,20 +365,32 @@ table th {
 }
 
 /* Navbar */
-.navbar {
-  display: flex;
+/* .navbar {
+  display: ;
   justify-content: space-between;
   align-items: center;
   padding: 0.7rem 2rem;
   z-index: 1;
   width: 100%;
+  height: 120px;
   border-bottom: solid 1px var(--primary-color);
-  opacity: 0.9;
+  opacity: 1;
   margin-bottom: 1rem;
-}
+  margin-top: 0;
+} */
+.navbar {
+  border:1px solid rgb(28, 26, 43);
+  margin-top: 0px;
+  height: 100px;
+  width: 100%;
+  /* background-color:rgb(28, 26, 43); */
+} 
 
 .navbar ul {
   display: flex;
+  margin-left:80%;
+  margin-top: 50px;
+  /* text-align: right; */
 }
 
 .navbar a {
