--- a/client/src/App.css
+++ b/client/src/App.css
@@ -11,7 +11,7 @@
 
 * {
   box-sizing: border-box;
-  /* border: 1px solid red; */
+  border: 1px solid red;
   margin: 0;
   padding: 0;
 }
@@ -22,6 +22,7 @@ body {
   line-height: 1.6;
   background-color: #fff;
   color: #333;
+
 }
 
 .backImage {
@@ -65,8 +66,8 @@ float: left;
 /* Utilities */
 .container {
   /* max-width: 1100px;
-  margin: auto;
-  overflow: hidden; */
+  /* margin: auto; */
+  /* overflow: hidden;  */
   padding: 0 2rem;
   margin-top: 100px;
 }
@@ -204,6 +205,9 @@ float: left;
   display: grid;
   grid-template-columns: 2fr 3fr;
   grid-gap: 2rem;
+    /* border: 1px solid red; */
+
+
 }
 
 .btn {
@@ -327,6 +331,7 @@ input {
 }
 
 .form-text {
+  border: 1px solid red;
   display: block;
   margin-top: 0.3rem;
   color: #888;
@@ -337,6 +342,8 @@ input[type='email'],
 input[type='phone'],
 input[type='password'],
 input[type='date'],
+input[type='setup'],
+input[type='youtubeVideoId'],
 select,
 textarea {
   display: block;
@@ -367,7 +374,7 @@ button {
   padding: 0 2rem;
   background-color: rgba(236,214,110, 0.8);
   border-radius: 1em;
-  border: 2px solid blue;
+  border: 2px solid black;
 }
 
 .form-container h1,
@@ -401,7 +408,7 @@ table th {
   margin-top: 0;
 } */
 .navbar {
-  border:1px solid rgb(16, 4, 109);
+  border:1px solid black;
   margin-top: 0px;
   height: 100px;
   width: 100%;
@@ -436,6 +443,19 @@ table th {
 
 .navbar .welcome span {
   margin-right: 0.6rem;
+}
+
+.formBand, .formFilter {
+    /* border: 1px solid red; */
+    max-width: 500px;
+    height: auto;
+    margin: 2rem auto;
+    overflow: hidden;
+    padding: 0 2rem;
+    background-color: rgba(236,214,110, 0.8);
+    border-radius: 1em;
+    border: 2px solid black;
+
 }
 
 /* Animation (Add After) */
