--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.google.com/specimen/Montserrat?selection.family=Montserrat');
-
 /* Global Styles */
+
 :root {
   --primary-color: #003699;
   --dark-color: #333333;
@@ -11,7 +11,7 @@
 
 * {
   box-sizing: border-box;
-  border: 1px solid red;
+  /* border: 1px solid red; */
   margin: 0;
   padding: 0;
 }
@@ -22,20 +22,19 @@ body {
   line-height: 1.6;
   background-color: #fff;
   color: #333;
-
+  /* max-height: 500px; */
 }
 
 .backImage {
   /* border: 10px solid red; */
-  height: 450px;
-  width:65%;
+  /* height:1000%; */
+  width: 90%;
   background-image: url("./components/layout/homeImg.png");
   background-repeat: no-repeat;
   text-align: center;
-  margin: auto;
+  margin-left: auto;
+  margin-right: auto;
   margin-top: 80px;
-
-
 }
 
 a {
@@ -54,16 +53,18 @@ ul {
 .divLogo {
   width: 20%;
 }
-.logoNav { 
-/* border: 1px solid red; */
-margin-left: 20px;
-margin-top: 10px;
-width: 140%;
-text-align: left;
-float: left;
+
+.logoNav {
+  /* border: 1px solid red; */
+  margin-left: 20px;
+  margin-top: 20px;
+  width: 200%;
+  text-align: left;
+  float: left;
 }
 
 /* Utilities */
+
 .container {
   /* max-width: 1100px;
   /* margin: auto; */
@@ -73,6 +74,7 @@ float: left;
 }
 
 /* Text Styles*/
+
 .x-large {
   font-size: 4rem;
   line-height: 1.2;
@@ -115,6 +117,7 @@ float: left;
 }
 
 /* Cards */
+
 .card {
   padding: 1rem;
   border: #ccc 1px dotted;
@@ -122,6 +125,7 @@ float: left;
 }
 
 /* List */
+
 .list {
   margin: 0.5rem 0;
 }
@@ -131,58 +135,75 @@ float: left;
 }
 
 /* Padding */
+
 .p {
   padding: 0.5rem;
 }
+
 .p-1 {
   padding: 1rem;
 }
+
 .p-2 {
   padding: 2rem;
 }
+
 .p-3 {
   padding: 3rem;
 }
+
 .py {
   padding: 0.5rem 0;
 }
+
 .py-1 {
   padding: 1rem 0;
 }
+
 .py-2 {
   padding: 2rem 0;
 }
+
 .py-3 {
   padding: 3rem 0;
 }
 
 /* Margin */
+
 .m {
   margin: 0.5rem;
 }
+
 .m-1 {
   margin: 1rem;
 }
+
 .m-2 {
   margin: 2rem;
 }
+
 .m-3 {
   margin: 3rem;
 }
+
 .my {
   margin: 0.5rem 0;
 }
+
 .my-1 {
   margin: 1rem 0;
 }
+
 .my-2 {
   margin: 2rem 0;
 }
+
 .my-3 {
   margin: 3rem 0;
 }
 
 /* Grid */
+
 .grid-2 {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
@@ -205,9 +226,7 @@ float: left;
   display: grid;
   grid-template-columns: 2fr 3fr;
   grid-gap: 2rem;
-    /* border: 1px solid red; */
-
-
+  /* border: 1px solid red; */
 }
 
 .btn {
@@ -263,50 +282,32 @@ float: left;
   color: #333;
 }
 
-.btn-primary,
-.bg-primary,
-.badge-primary,
-.alert-primary {
+.btn-primary, .bg-primary, .badge-primary, .alert-primary {
   background: var(--primary-color);
   /* color: #fff; */
 }
 
-.btn-light,
-.bg-light,
-.badge-light,
-.alert-light {
+.btn-light, .bg-light, .badge-light, .alert-light {
   background: var(--light-color);
   color: #333;
 }
 
-.btn-dark,
-.bg-dark,
-.badge-dark,
-.alert-dark {
+.btn-dark, .bg-dark, .badge-dark, .alert-dark {
   background: var(--dark-color);
   color: #fff;
 }
 
-.btn-danger,
-.bg-danger,
-.badge-danger,
-.alert-danger {
+.btn-danger, .bg-danger, .badge-danger, .alert-danger {
   background: var(--danger-color);
   color: #fff;
 }
 
-.btn-success,
-.bg-success,
-.badge-success,
-.alert-success {
+.btn-success, .bg-success, .badge-success, .alert-success {
   background: var(--success-color);
   color: #fff;
 }
 
-.btn-white,
-.bg-white,
-.badge-white,
-.alert-white {
+.btn-white, .bg-white, .badge-white, .alert-white {
   background: #fff;
   color: #333;
   border: #ccc solid 1px;
@@ -316,8 +317,7 @@ float: left;
   opacity: 0.8;
 }
 
-.bg-light,
-.badge-light {
+.bg-light, .badge-light {
   border: #ccc solid 1px;
 }
 
@@ -326,6 +326,7 @@ float: left;
 }
 
 /* Forms */
+
 input {
   margin: 1.2rem 0;
 }
@@ -337,15 +338,7 @@ input {
   color: #888;
 }
 
-input[type='text'],
-input[type='email'],
-input[type='phone'],
-input[type='password'],
-input[type='date'],
-input[type='setup'],
-input[type='youtubeVideoId'],
-select,
-textarea {
+input[type='text'], input[type='email'], input[type='phone'], input[type='password'], input[type='date'], input[type='setup'], input[type='youtubeVideoId'], select, textarea {
   display: block;
   width: 100%;
   padding: 0.4rem;
@@ -353,8 +346,7 @@ textarea {
   border: 1px solid #ccc;
 }
 
-input[type='submit'],
-button {
+input[type='submit'], button {
   font: inherit;
 }
 
@@ -372,19 +364,16 @@ button {
   margin: 2rem auto;
   overflow: hidden;
   padding: 0 2rem;
-  background-color: rgba(236,214,110, 0.8);
+  background-color: rgba(236, 214, 110, 0.8);
   border-radius: 1em;
   border: 2px solid black;
 }
 
-.form-container h1,
-h2,
-h3 {
+.form-container h1, h2, h3 {
   text-align: center;
 }
 
-table th,
-table td {
+table th, table td {
   padding: 1rem;
   text-align: left;
 }
@@ -394,6 +383,7 @@ table th {
 }
 
 /* Navbar */
+
 /* .navbar {
   display: ;
   justify-content: space-between;
@@ -407,15 +397,33 @@ table th {
   margin-bottom: 1rem;
   margin-top: 0;
 } */
+
+nav {
+  background-color: rgb(28, 26, 43);
+}
+
 .navbar {
-  border:1px solid black;
+  border: 1px solid black;
   margin-top: 0px;
   height: 100px;
   width: 100%;
-  /* background-color:rgb(28, 26, 43); */
-} 
+  background-color: rgb(28, 26, 43);
+}
 
+.footer {
+  color: white;
+  text-align: center;
+  /* padding: 100px 0;
+  margin-bottom: 0px; */
+  flex-shrink: 0;
+}
 
+.footer p {
+  /* color: black; */
+  
+  background-color: black;
+  height: 50px;
+}
 
 /* .homeImg {
   width: 1000px;
@@ -426,7 +434,7 @@ table th {
 
 .navbar ul {
   display: flex;
-  margin-left:80%;
+  margin-left: 80%;
   margin-top: 50px;
   /* text-align: right; */
 }
@@ -446,69 +454,64 @@ table th {
 }
 
 .formBand, .formFilter {
-    /* border: 1px solid red; */
-    max-width: 500px;
-    height: auto;
-    margin: 2rem auto;
-    overflow: hidden;
-    padding: 0 2rem;
-    background-color: rgba(236,214,110, 0.8);
-    border-radius: 1em;
-    border: 2px solid black;
-
+  /* border: 1px solid red; */
+  max-width: 500px;
+  height: auto;
+  margin: 2rem auto;
+  overflow: hidden;
+  padding: 0 2rem;
+  background-color: rgba(236, 214, 110, 0.8);
+  border-radius: 1em;
+  border: 2px solid black;
 }
 
 /* Animation (Add After) */
+
 .item-enter {
   opacity: 0;
 }
+
 .item-enter-active {
   opacity: 1;
   transition: opacity 1000ms ease-in;
 }
+
 .item-exit {
   opacity: 1;
 }
+
 .item-exit-active {
   opacity: 0;
   transition: opacity 1000ms ease-in;
 }
 
 /* Mobile Styles */
+
 @media (max-width: 700px) {
   .hide-sm {
     display: none;
   }
-
-  .grid-2,
-  .grid-3,
-  .grid-4 {
+  .grid-2, .grid-3, .grid-4 {
     grid-template-columns: 1fr;
   }
-
   /* Text Styles */
   .x-large {
     font-size: 3rem;
   }
-
   .large {
     font-size: 2rem;
   }
-
   .lead {
     font-size: 1rem;
   }
-
   /* Navbar */
   .navbar {
     display: block;
     text-align: center;
   }
-
   .navbar h1 {
     margin-bottom: 0.6rem;
   }
-
   .navbar ul {
     text-align: center;
     justify-content: center;
