--- a/client/src/App.css
+++ b/client/src/App.css
@@ -22,7 +22,6 @@ body {
   line-height: 1.6;
   background-color: #fff;
   color: #333;
-  /* max-height: 500px; */
 }
 
 .backImage {
@@ -270,7 +269,7 @@ ul {
   text-align: center;
   margin: 0.3rem;
   background: var(--light-color);
-  color: #333;
+  color: white;
   border-radius: 5px;
 }
 
@@ -412,17 +411,18 @@ nav {
 
 .footer {
   color: white;
+  background-color: black;
   text-align: center;
-  /* padding: 100px 0;
-  margin-bottom: 0px; */
+  padding: 20px;
+  /* margin-bottom: 0px; */
   flex-shrink: 0;
+  margin-top: 30vh;
+
 }
 
 .footer p {
-  /* color: black; */
-  
-  background-color: black;
-  height: 50px;
+  flex: 1 0 auto;
+  padding: 10px;
 }
 
 /* .homeImg {
