--- a/client/src/App.css
+++ b/client/src/App.css
@@ -7,6 +7,7 @@
   --light-color: #f4f4f4;
   --danger-color: #dc3545;
   --success-color: #28a745;
+
 }
 
 * {
@@ -20,20 +21,21 @@ body {
   font-family: 'Montserrat', sans-serif;
   font-size: 1rem;
   line-height: 1.6;
-  background-color: #fff;
+  background-color: #526169;
   color: #333;
 }
 
 .backImage {
   /* border: 10px solid red; */
-  /* height:1000%; */
+  display: block;
+  height:500%;
   width: 90%;
   background-image: url("./components/layout/homeImg.png");
   background-repeat: no-repeat;
   text-align: center;
   margin-left: auto;
   margin-right: auto;
-  margin-top: 80px;
+  margin-top: 90px;
 }
 
 a {
@@ -119,8 +121,11 @@ ul {
 
 .card {
   padding: 1rem;
-  border: #ccc 1px dotted;
+  border: rgb(0, 0, 0) 2px solid ;
   margin: 0.7rem 0;
+  border-radius: 1em;
+  /* background-color: rgb(169, 232, 243); */
+  background-color: #dbebf5;
 }
 
 /* List */
@@ -130,7 +135,7 @@ ul {
 }
 
 .list li {
-  padding-bottom: 0.3rem;
+  padding-bottom: 0.3rem; 
 }
 
 /* Padding */
@@ -263,6 +268,7 @@ ul {
   margin-right: 0.2rem;
 }
 
+
 .badge {
   font-size: 0.8rem;
   padding: 0.2rem 0.7rem;
@@ -300,6 +306,10 @@ ul {
   background: var(--danger-color);
   color: #fff;
 }
+/* .btn-warning, .bg-warning, .badge-warning, .alert-warning {
+  background: var(--warning-color);
+  color: black;
+} */
 
 .btn-success, .bg-success, .badge-success, .alert-success {
   background: var(--success-color);
@@ -381,32 +391,17 @@ table th {
   background: var(--light-color);
 }
 
-/* Navbar */
-
-/* .navbar {
-  display: ;
-  justify-content: space-between;
-  align-items: center;
-  padding: 0.7rem 2rem;
-  z-index: 1;
-  width: 100%;
-  height: 120px;
-  border-bottom: solid 1px var(--primary-color);
-  opacity: 1;
-  margin-bottom: 1rem;
-  margin-top: 0;
-} */
-
 nav {
   background-color: rgb(28, 26, 43);
 }
 
 .navbar {
+color: yellow;
   border: 1px solid black;
   margin-top: 0px;
   height: 100px;
   width: 100%;
-  background-color: rgb(28, 26, 43);
+  background-color: rgb(0, 0, 0);
 }
 
 .footer {
