--- a/client/src/App.css
+++ b/client/src/App.css
@@ -25,12 +25,40 @@ body {
   color: #333;
 }
 
+/* Welcome Page with Search bar */
+/* .welcomeDiv {
+  width: 90%;
+} */
+
+.formSearch{
+width: 100%;
+margin-left :60px;
+}
+.searchInputWelcomePage{
+  width:800px;
+  margin-left: auto;
+  margin-right: 20px;
+  height: 50px;
+  font-size: 1.5em;
+}
+
+.searchButton {
+  background-color: yellow;
+  width: 200px;
+  height: 50px;
+  border-radius: 10px;
+  font-weight: bold;
+  font-size: 1.5em;
+
+
+}
+
 .backImage {
   /* border: 10px solid red; */
   display: block;
   height:500%;
   width: 90%;
-  background-image: url("./components/layout/homeImg.png");
+  /* background-image: url("./components/layout/homeImg.png"); */
   background-repeat: no-repeat;
   text-align: center;
   margin-left: auto;
@@ -57,9 +85,9 @@ ul {
 
 .logoNav {
   /* border: 1px solid red; */
-  margin-left: 20px;
+  margin-left: 10px;
   margin-top: 20px;
-  width: 200%;
+  width: 150%;
   text-align: left;
   float: left;
 }
@@ -444,7 +472,7 @@ color: yellow;
   color: yellow;
 }
 
-.welcome {
+.welcome { 
   margin-right: 1rem;
 }
 
