--- a/client/src/App.css
+++ b/client/src/App.css
@@ -57,8 +57,8 @@ margin-left :60px;
   /* border: 10px solid red; */
   display: block;
   height:500%;
-  width: 90%;
-  /* background-image: url("./components/layout/homeImg.png"); */
+  width: 70%;
+  background-image: url("./components/layout/homeImg.png");
   background-repeat: no-repeat;
   text-align: center;
   margin-left: auto;
