--- a/client/src/App.css
+++ b/client/src/App.css
@@ -2,13 +2,19 @@
 /* Global Styles */
 
 :root {
-  --primary-color: #003699;
+
+  --primary-color: #addcf6;
   --dark-color: #333333;
   --light-color: #f4f4f4;
   --danger-color: #dc3545;
   --success-color: #28a745;
+  --warning-color: yellow;
 
+    
 }
+
+
+
 
 * {
   box-sizing: border-box;
@@ -21,24 +27,39 @@ body {
   font-family: 'Montserrat', sans-serif;
   font-size: 1rem;
   line-height: 1.6;
-  background-color: #addcf6;
-  color: #333;
+  /* background-color: #addcf6; */
+  background-color: #000;
+  color: rgb(0, 0, 0);
 }
 
 /* Welcome Page with Search bar */
+
 /* .welcomeDiv {
   width: 90%;
 } */
 
-.formSearch{
-width: 100%;
-margin-left :60px;
+.whiteSpace{
+  color: #ffffff;
+  font-size: 1.2em;
+  font-weight: 900;
+  text-align: center;
+  margin-top: 5em;
 }
-.searchInputWelcomePage{
-  width:800px;
+
+
+.formSearch {
+  width: 100%;
   margin-left: auto;
-  margin-right: 20px;
-  height: 50px;
+  margin-right: auto;
+  text-align: center;
+}
+
+.searchInputWelcomePage {
+  width: 50%;
+  margin-left: auto;
+  margin-top: 2em;
+  margin-right: 1em;
+  height: 2em;
   font-size: 1.5em;
 }
 
@@ -46,24 +67,22 @@ margin-left :60px;
   background-color: yellow;
   width: 200px;
   height: 50px;
-  border-radius: 10px;
+  border-radius: 5px;
   font-weight: bold;
   font-size: 1.5em;
-
-
 }
 
 .backImage {
-  /* border: 10px solid red; */
-  display: block;
-  height:500%;
-  width: 70%;
-  background-image: url("./components/layout/homeImg.png");
+  border: 1px solid rgb(0, 0, 0);
+  /* display: block; */
+  height: 500%;
+  width: 100%;
+  background-image: url("./components/layout/homeImgBlack.png");
   background-repeat: no-repeat;
-  text-align: center;
-  margin-left: auto;
-  margin-right: auto;
-  margin-top: 100px;
+  /* text-align: center; */
+  margin-left: 0em;
+  margin-right: 0em;
+  margin-top: 40px;
 }
 
 a {
@@ -85,9 +104,9 @@ ul {
 
 .logoNav {
   /* border: 1px solid red; */
-  margin-left: 10px;
-  margin-top: 20px;
-  width: 150%;
+  margin-left: 2em;
+  margin-top: 0em;
+  width: 200%;
   text-align: left;
   float: left;
 }
@@ -99,7 +118,7 @@ ul {
   /* margin: auto; */
   /* overflow: hidden;  */
   padding: 0 2rem;
-  margin-top: 100px;
+  margin-top: 50px;
 }
 
 /* Text Styles*/
@@ -126,7 +145,8 @@ ul {
 }
 
 .text-primary {
-  color: var(--primary-color);
+  /* color: var(--primary-color); */
+  color: var(--warning-color);
 }
 
 .text-dark {
@@ -149,18 +169,18 @@ ul {
 
 .card {
   padding: 1rem;
-  border: rgb(0, 0, 0) 2px solid ;
+  border: rgb(0, 0, 0) 2px solid;
   margin: 0.7rem 0;
   border-radius: 1em;
   /* background-color: rgb(169, 232, 243); */
   background-color: #dbebf5;
 }
-.card2 {
 
-  width:60%;
+.card2 {
+  width: 60%;
   text-align: center;
   padding: 1rem;
-  border: rgb(0, 0, 0) 2px solid ;
+  border: rgb(0, 0, 0) 2px solid;
   margin-top: 10px;
   margin-left: auto;
   margin-right: auto;
@@ -170,11 +190,10 @@ ul {
 }
 
 .card2 {
-
-  width:60%;
+  width: 60%;
   text-align: center;
   padding: 1rem;
-  border: rgb(0, 0, 0) 2px solid ;
+  border: rgb(0, 0, 0) 2px solid;
   margin-top: 10px;
   margin-left: auto;
   margin-right: auto;
@@ -182,6 +201,7 @@ ul {
   /* background-color: rgb(169, 232, 243); */
   background-color: #dbebf5;
 }
+
 /* List */
 
 .list {
@@ -189,7 +209,8 @@ ul {
 }
 
 .list li {
-  padding-bottom: 0.3rem; 
+  padding-bottom: 0.3rem;
+  color: black;
 }
 
 /* Padding */
@@ -322,7 +343,6 @@ ul {
   margin-right: 0.2rem;
 }
 
-
 .badge {
   font-size: 0.8rem;
   padding: 0.2rem 0.7rem;
@@ -360,6 +380,7 @@ ul {
   background: var(--danger-color);
   color: #fff;
 }
+
 .btn-warning, .bg-warning, .badge-warning, .alert-warning {
   background: yellow;
   color: black;
@@ -401,7 +422,7 @@ input {
   color: #888;
 }
 
-input[type='text'], input[type='email'], input[type='phone'], input[type='password'], input[type='date'], input[type='genre'],input[type='youtubeUrl'], input[type='youtubeVideoId'], select, textarea {
+input[type='text'], input[type='email'], input[type='phone'], input[type='password'], input[type='date'], input[type='genre'], input[type='youtubeUrl'], input[type='youtubeVideoId'], select, textarea {
   display: block;
   width: 100%;
   padding: 0.4rem;
@@ -446,16 +467,17 @@ table th {
 }
 
 nav {
-  background-color: rgb(28, 26, 43);
+  background-color: rgb(0, 0, 0);
 }
 
 .navbar {
-color: yellow;
-  border: 1px solid black;
+  /* color: yellow; */
+  border: 1px solid #000;
   margin-top: 0px;
-  height: 100px;
+  height: 8em;
   width: 100%;
-  background-color: rgb(0, 0, 0);
+  color:rgb(255, 252, 101);
+  /* background-color: rgb(0, 0, 0); */
 }
 
 .footer {
@@ -466,7 +488,6 @@ color: yellow;
   /* margin-bottom: 0px; */
   flex-shrink: 0;
   margin-top: 30vh;
-
 }
 
 .footer p {
@@ -498,7 +519,7 @@ color: yellow;
   color: yellow;
 }
 
-.welcome { 
+.welcome {
   margin-right: 1rem;
 }
 
