--- a/client/src/App.css
+++ b/client/src/App.css
@@ -13,6 +13,11 @@
     
 }
 
+#root {
+  background: url("./components/layout/homeImgBlack.png") no-repeat center center fixed;
+  background-size: cover;
+}
+
 
 
 
@@ -73,16 +78,16 @@ body {
 }
 
 .backImage {
-  border: 1px solid rgb(0, 0, 0);
+  /* border: 1px solid rgb(0, 0, 0); */
   /* display: block; */
-  height: 500%;
-  width: 100%;
-  background-image: url("./components/layout/homeImgBlack.png");
-  background-repeat: no-repeat;
+  /* height: 500%; */
+  /* width: 100%; */
+  background: url("./components/layout/homeImgBlack.png") no-repeat center center fixed;
+  background-size: cover;
   /* text-align: center; */
-  margin-left: 0em;
+  /* margin-left: 0em;
   margin-right: 0em;
-  margin-top: 40px;
+  margin-top: 40px; */
 }
 
 a {
@@ -467,7 +472,7 @@ table th {
 }
 
 nav {
-  background-color: rgb(0, 0, 0);
+  background-color: rgba(250, 10, 10, 0);
 }
 
 .navbar {
